--- a/2D/Practica_animacion/TODO.txt
+++ b/2D/Practica_animacion/TODO.txt
@@ -1,8 +1,6 @@
 https://www.iforce2d.net/b2dtut/bodies
 
-Como hago un cuerpo dinamico en Box2D estático, usando C++ puro
+Que librerias se pueden eliminar (Todas menos sfml y box2d)
 
-Como cambio los colores de los cuerpos en Box2D, usando C++ puro
 
-Que librerias se pueden eliminar
 
